correcting a spacing issue so the long caption on the template comp project shows fully on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    margin-top: 150px;
+    margin-top: 120px;
 }
 
 header {
